--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -38,6 +38,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
+#NEWIFI-D1
         TNAME: NEWIFI3
       run: |
         cd /opt/rt-n56u/trunk
